# RoboDriver

./: .gitignore  .gitmodules  README.md  README_en.md  README_zh.md  Robodriver.txt  prompt.txt  pyproject.toml  requirements_lightwheel.txt
components/arms/dora-arm-piper/: pyproject.toml
components/arms/dora-arm-realman/: pyproject.toml
components/arms/dora-arm-so101/: pyproject.toml
components/cameras/dora-camera-orbbec-v1/: pyproject.toml
components/cameras/dora-camera-orbbec-v1/dora_camera_orbbec_v1/: main.py
components/cameras/dora-camera-orbbec-v1/example/: view.yml
components/cameras/dora-camera-realsense/: pyproject.toml
components/simulations/dora-sim-genesis-franka-grasp-cube/: pyproject.toml
operating_platform/core/: coordinator.py  monitor.py  recorder.py  replayer.py
operating_platform/dataset/: compute_stats.py  dorobot_dataset.py  functions.py
operating_platform/dataset/visual/: visual_dataset.py  visualize_dataset_html.py
operating_platform/robot/robots/: configs.py  utils.py
operating_platform/robots/: configs.py  daemon.py  utils.py
operating_platform/scripts/: record.py  replay.py  run.py
operating_platform/teleoperators/: utils.py
operating_platform/utils/: dataset.py  parser.py
robodriver/core/: coordinator.py  coordinator_need_test.py  inferencer.py  monitor.py  recorder.py  replayer.py  ros2thread.py  simulator.py
robodriver/core/policies/: __init__.py  base_policy.py  bc_policy.py  flagscale_policy.py  openpi_policy.py
robodriver/dataset/: dorobot_dataset.py
robodriver/dataset/visual/: visual_dataset.py
robodriver/robots/: daemon.py  utils.py
robodriver/robots/Universal_Client-master/: .gitignore  README.md  pyproject.toml
robodriver/robots/Universal_Client-master/.github/workflows/: test.yml
robodriver/robots/Universal_Client-master/config/: settings.yaml
robodriver/robots/Universal_Client-master/src/: main.py
robodriver/robots/Universal_Client-master/src/api/: server.py
robodriver/robots/Universal_Client-master/src/core/: base_connector.py  connector_ros1.py  connector_ros2.py  factory.py  zmq_hub.py
robodriver/robots/Universal_Client-master/src/inference/: cloud_agent.py  data_collector_adapter.py  factory.py  registry.py
robodriver/robots/Universal_Client-master/src/inference/plugins/BeingH/: beingh_plugin.py  service.py
robodriver/robots/Universal_Client-master/src/plugins/: lbot_handlers.py  std_ros_handlers.py
robodriver/robots/Universal_Client-master/src/utils/: config_loader.py
robodriver/robots/Universal_Client-master/tests/: mock_ros1_publisher.py  mock_ros2_publisher.py  test.py  test_camera.py  test_robot.py
robodriver/robots/robodriver-robot-a2d-aio-ros2/: README.md
robodriver/robots/robodriver-robot-galbot-g1-aio-sdk-rc/: pyproject.toml
robodriver/robots/robodriver-robot-galbot-g1-aio-sdk-rc/lerobot_robot_galbot_g1_aio_sdk_rc/: __init__.py
robodriver/robots/robodriver-robot-galbot-g1-aio-sdk-rc/robodriver_robot_galbot_g1_aio_sdk_rc/: __init__.py  config.py  node.py  robot.py
robodriver/robots/robodriver-robot-galbot-g1-aio-sdk-rc/test/: chassis_kinematics.py  galbot_replay.py  replay_lerobot.py  reset_data.yml  reset_whole_body.py
robodriver/robots/robodriver-robot-linkerbot-aio-ros1-main/: .gitignore  README.md  pyproject.toml
robodriver/robots/robodriver-robot-linkerbot-aio-ros1-main/lerobot_robot_linkerbot_aio_ros1/: __init__.py
robodriver/robots/robodriver-robot-linkerbot-aio-ros1-main/robodriver_robot_linkerbot_aio_ros1/: __init__.py  config.py  node.py  robot.py  status.py
robodriver/scripts/: evaluate.py  inference.py  record.py  replay.py  run.py  sim.py  visual.py  visual_lightwheel.py
robodriver/teleoperators/: utils.py
robodriver/teleoperators/robodriver-teleoperator-pico-ultra4-dora/: .gitignore  README.md  pyproject.toml
robodriver/teleoperators/robodriver-teleoperator-pico-ultra4-dora/dora/: dataflow.yml
robodriver/teleoperators/robodriver-teleoperator-pico-ultra4-dora/lerobot_teleoperator_pico_ultra4_dora/: __init__.py
robodriver/teleoperators/robodriver-teleoperator-pico-ultra4-dora/robodriver_teleoperator_pico_ultra4_dora/: __init__.py  config.py  controller.py  dora_node_piper.py  node.py  status.py  teleoperator.py
robodriver/teleoperators/robodriver-teleoperator-pico-ultra4-dora/robodriver_teleoperator_pico_ultra4_dora/interface/: __init__.py  piper.py
robodriver/utils/: data_file.py  import_utils.py  parser.py  qc_tools.py  utils.py
scripts/: visual.sh
test/eular/: test_convert.py
test/ik/: kinematic_pin.py  view_in_sim.py  view_in_sim_direct_value.py
test/lerobot/: load_data.py  test_so101.py
test/mujoco/: view_and_render_plus.py
(+92 files in other folders)
