[build-system]
requires = ["uv>=0.1.0", "setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "RoboDriver"
version = "0.0.3"
description = ""
readme = "README.md"
authors = [
    { name = "Xiang Yang", email = "ryu-yang@qq.com" }
]
requires-python = ">=3.10,<4.0"
dependencies = [
    "torch>=2.7.1",
    "lerobot-robodriver>=0.4.0",
    # "genesis-world",
    "mujoco",

    "logging_mp==0.1.5",
    "python-socketio",

    "sounddevice",
    "soundfile",

    "rerun-sdk",
]

[project.optional-dependencies]
inference = [
    # "openpi-client",
]

[project.scripts]
robodriver-run="robodriver.scripts.run:main"
robodriver-sim="robodriver.scripts.sim:main"
robodriver-visual="robodriver.scripts.visual:main"
robodriver-inference="robodriver.scripts.inference:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["robodriver*"]
exclude = []
